--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,22 @@
         <h1>Boo!!</h1>
         <p class="top_words">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate soluta quis ducimus libero delectus laudantium accusamus sapiente explicabo excepturi maiores facere vel accusantium blanditiis adipisci nobis iste debitis, maxime dolorum.</p>
     </div>
-    <div class="pic">
-        <img src="images/001.jpg" width="330px" alt="yum">
+
+    <div class="grid">
+        <div class="pic">
+            <p class="left">left</p>
+            <img src="images/001.jpg" width="330px" alt="yum">
+            <p class="right"right></p>
+        </div>
+        <div class="pic">
+            <img src="images/001.jpg" width="330px" alt="yum">
+        </div>
+        <div class="pic">
+            <img src="images/001.jpg" width="330px" alt="yum">
+        </div>
     </div>
+
+    
     
 </body>
 </html>
